Tue Aug  2 20:10:16 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb: pass "--ruby" option to
	  test/testunit/tests_for_parallel/runner.rb. [Bug #5132] [ruby-dev:44303]

Tue Aug  2 15:53:37 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (str_to_encoding): rename from to_encoding and
	  use str_to_encindex.

	* encoding.c (str_to_encindex): split from to_encoding.

	* encoding.c (rb_to_encoding): use str_to_encoding.

	* encoding.c (rb_obj_encoding): don't bypass rb_encoding*.
	  If it uses rb_encoding*, it bypass encindex. If it uses encindex,
	  it doesn't bypass.

	* encoding.c (enc_find): add shortcut for encoding object, use
	  str_to_encindex, and avoid bypass rb_encoding*.

Tue Aug  2 12:03:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (recursive_hash): hash value of emptied hash should be
	  equal to an empty hash.  [ruby-core:38650]

Tue Aug  2 11:42:15 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): :! is valid symbol.  [Bug #5136]

Tue Aug  2 07:33:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTP_version_1_1_methods#test_timeout_during_HTTP_session):
	  If you connect to localhost, you should listen localhost.

	* test/net/http/test_https.rb (TestNetHTTPS#test_timeout_during_SSL_handshake):
	  ditto.

Tue Aug  2 06:18:15 2011  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/installer.rb (class Gem): Correct path check on Windows
	  Possible fix for [Ruby 1.9 - Bug #5111]
	* test/rubygems/test_gem_installer.rb (load Gem): ditto

Mon Aug  1 20:12:03 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (TestProcess#windows?): new method.

	* test/ruby/test_process.rb (TestProcess#*): use above method.

	* test/ruby/test_process.rb (TestProcess#test_execopts_redirect):
	  windows doesn't support FD_CLOEXEC.

Mon Aug 01 15:45:23 2011  Eric Hodel  <drbrain@segment7.net>
