@@ -1755,7 +1755,7 @@ thread_free(void *ptr)
 	else {
 #ifdef USE_SIGALTSTACK
 	    if (th->altstack) {
-		xfree(th->altstack);
+		free(th->altstack);
 	    }
 #endif
 	    ruby_xfree(ptr);
@@ -1828,7 +1828,8 @@ th_init(rb_thread_t *th, VALUE self)
 
     /* allocate thread stack */
 #ifdef USE_SIGALTSTACK
-    th->altstack = xmalloc(ALT_STACK_SIZE);
+    /* altstack of main thread is reallocated in another place */
+    th->altstack = malloc(ALT_STACK_SIZE);
 #endif
     th->stack_size = RUBY_VM_THREAD_STACK_SIZE;
     th->stack = thread_recycle_stack(th->stack_size);
